<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".frag.MainMenuFragment"
    tools:ignore="Overdraw">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/continue_game"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/newGameButton"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newGameButton"
        android:layout_width="277dp"
        android:layout_height="54dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:fontFamily="monospace"
        android:text="@string/new_game"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gameRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/help"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
